fix overflow-x

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,6 @@
 html {
     overflow-x: hidden;
+    height: 100%;
 }
 
 body {
